resources/kubevela/velaux-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velaux
  namespace: vela-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: velaux
            port:
              number: 80
